# LabRat

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
labrat/: main.py
labrat/cli/: agents.py  auth.py  common.py  groups.py  projects.py  run.py  users.py
labrat/controllers/: agents.py  auth.py  groups.py  projects.py  users.py
labrat/core/: agent.py  config.py  utils.py
