[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "gitlabrat"
version = "1.1"
description = "LabRat: GitLab exploitation orchestrator"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "John Chamblee", email = "conway.py@proton.farm"}
]
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "python-gitlab>=3.0.0",
    "GitPython>=3.1.0",
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/JChamblee99/LabRat"
Repository = "https://github.com/JChamblee99/LabRat.git"
Issues = "https://github.com/JChamblee99/LabRat/issues"

[project.scripts]
labrat = "labrat.main:main"

[tool.hatch.build.targets.wheel]
packages = ["labrat"]

[tool.hatch.build.targets.sdist]
include = [
    "/labrat",
    "/README.md",
    "/LICENSE",
]